# shaddowbox

./: Cargo.toml  README.md
api-server/: Cargo.toml  report.json
api-server/src/: main.rs
api-server/src/application/server/: file_handler.rs  mod.rs  object_handler.rs
api-server/src/domain/: mod.rs  object_service.rs  object_storage_node.rs
api-server/src/infrastructure/: local_file_storage_node.rs  mod.rs  remote_file_storage_node.rs
core/: Cargo.toml
core/src/: mod.rs
core/src/application/: util.rs
core/src/application/server/: mod.rs  object_handler.rs  object_stripe_handler.rs  util.rs
core/src/domain/: mod.rs  object.rs  object_service.rs  object_storage_node.rs  object_storage_node_distribution.rs  object_stripe_storage_node.rs  object_stripe_storage_node_distributor.rs
core/src/infrastructure/: local_file_storage_node.rs  remote_file_storage_node.rs
doc/: design.md
storage-node/: Cargo.toml
storage-node/src/: main.rs
storage-node/src/application/: util.rs
storage-node/src/application/server/: object_handler.rs
storage-node/src/domain/: mod.rs  object_service.rs
storage-node/src/infrastructure/: local_file_storage_node.rs  mod.rs
