[package]
name = "shaddowbox-core"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1"
axum = { features = ["http1", "http2", "json"], version = "0.6.*", default-features = false }
bytes = { default-features = false, version = "1" }
hyper = { version = "*", features = ["client", "tcp"], default-features = false }
serde = { version = "1.*", default-features = false }
serde_json = { version = "1.*", default-features = false }
tokio = { version = "*", features = ["fs"], default-features = false }
tower = { version = "*", default-features = false }
tracing = { version = "*", features = ["attributes"], default-features = false }
