[package]
name = "shaddowbox-core"
version = "0.1.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1"
axum = { features = ["http1", "http2", "macros", "tokio"], version = "0.7", default-features = false }
bytes = { default-features = false, version = "1" }
http-body-util = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
reqwest = {version = "0.12",features = ["http2"],  default-features = false}
serde = { version = "1.*", default-features = false }
serde_json = { version = "1.*", default-features = false }
tokio = { version = "*", features = ["fs", "rt"], default-features = false }
tokio-util = { version = "*", features = ["compat", "io"], default-features = false }
tower = { version = "*", default-features = false }
tracing = { version = "*", features = ["attributes"], default-features = false }
tokio-stream = "0.1.15"
